--- a/src/components/CustomHead.astro
+++ b/src/components/CustomHead.astro
@@ -1,9 +1,9 @@
 ---
 // Import the custom CSS
-import '../styles/custom.css';
+import "../styles/custom.css";
 ---
 
 <!-- Simple favicon link -->
-<link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
 
-<!-- This component doesn't render anything directly, it just imports the CSS --> 
+<!-- This component doesn't render anything directly, it just imports the CSS -->
