--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -1,12 +1,26 @@
 <!-- Placeholder for social icons -->
 <div class="social-icons">
-  <a href="https://github.com/cosdata/cosdata" class="sl-flex" target="_blank" rel="noopener noreferrer">
+  <a
+    href="https://github.com/cosdata/cosdata"
+    class="sl-flex"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
     <span class="sr-only">GitHub</span>
-    <svg width="20" height="20" fill="currentColor" aria-hidden="true"><use href="#icon-github" /></svg>
+    <svg width="20" height="20" fill="currentColor" aria-hidden="true"
+      ><use href="#icon-github"></use></svg
+    >
   </a>
-  <a href="https://discord.gg/XMdtTBrtKT" class="sl-flex" target="_blank" rel="noopener noreferrer">
+  <a
+    href="https://discord.gg/XMdtTBrtKT"
+    class="sl-flex"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
     <span class="sr-only">Discord</span>
-    <svg width="20" height="20" fill="currentColor" aria-hidden="true"><use href="#icon-discord" /></svg>
+    <svg width="20" height="20" fill="currentColor" aria-hidden="true"
+      ><use href="#icon-discord"></use></svg
+    >
   </a>
 </div>
 <style>
@@ -18,4 +32,5 @@
   .social-icons a:hover {
     opacity: 0.66;
   }
-</style> 
+</style>
+
